# twitter-cli

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: build-release.yml
docs/: api.md  architecture.md  config.md  console.md  mcp-skill.md  testing.md
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cdp/: page.tsx
frontend/src/app/commands/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/mcp/: page.tsx
frontend/src/app/preview/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/skills/: page.tsx
frontend/src/components/: bg-orbs.tsx  card.tsx  execution-table.tsx  file-upload-input.tsx  nav.tsx  password-input.tsx  providers.tsx  spinner.tsx  status-dot.tsx  vnc-embed.tsx
frontend/src/lib/: api.ts  i18n.ts  types.ts  use-lang.ts  use-lang.tsx  use-theme.ts
src/: auth.rs  cli.rs  config.rs  db.rs  discovery.rs  embedded.rs  errors.rs  main.rs  manifest.rs  models.rs  response.rs
src/agent_browser/: batch.rs  client.rs  mod.rs  parser.rs  types.rs
src/commands/: executor.rs  registry.rs
src/server/: mod.rs  routes.rs
src/twitter/: auth.rs  extract.rs  features.rs  graphql.rs  mod.rs  query_ids.rs
src/twitter/commands/: actions.rs  article.rs  bookmarks.rs  download.rs  likes.rs  mod.rs  notifications.rs  people.rs  profile.rs  replies.rs  search.rs  timeline.rs  trending.rs  tweet.rs
(+1 files in other folders)
